--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "rebuild": "electron-rebuild",
     "test": "echo \"Error: no test specified\" && exit 1",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
-    "postinstall": "electron-builder install-app-deps",
+    "postinstall": "electron-builder install-app-deps && electron-rebuild",
     "postuninstall": "electron-builder install-app-deps"
   },
   "author": "",
